# mpl_drip

./: README.md  pyproject.toml
.github/workflows/: release.yml
examples/: histogram.py
src/mpl_drip/: _version.py
src/plots_lib/: __init__.py  custom.mplstyle
