[project]
name = "mpl_drip"
version = "1.0.0"
description = "Make your mpl dripped up."
readme = "README.md"
authors = [{ name = "Tom Hilder", email = "tom.hilder.dlhp@gmail.com" }]
requires-python = ">=3.13"
dependencies = ["matplotlib>=3.10.5"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]
